# adventofcode

./: adventofcode.cabal  stack.yaml
app/2015/ex1/: ex1.hs
app/2015/ex5/: ex5.hs
app/2015/ex6/: ex6.hs
app/2015/ex7/: ex7.hs
app/2016/ex1/: ex1.hs
app/2016/ex2/: ex2.hs
app/2016/ex3/: ex3.hs
app/2016/ex4/: ex4.hs
app/2016/ex5/: ex5.hs
app/2016/ex6/: ex6.hs
app/2016/ex7/: ex7.hs
app/2016/ex8/: ex8.hs
app/ex2/: ex2.hs
app/ex3/: ex3.hs
app/ex4/: ex4.hs
app/ex6/: ex6.hs  test
app/ex8/: ex8.hs
